   * Added option to indent braces (aligning them with the indented block)
   * Added option to choose tabs or spaces based on surrounding code
   * Added Join Lines action (Ctrl+J)
   * Code completion is now only first-letter case-sensitive by default
   * Open with "System Editor"
   * Fixed missing semicolon after } when creating unnamed enumeration
   * Fixed auto indent for C style coments

C++ Support
   * Recognize *.cu as C files
   * Fixed false errors in code model on windows when used with MSVC
   * Added "Auto fold first comment" option

Project support
   * Reworked support for developing for different targets:
      * Reworked project settings
      * Reworked selection of active configuration
   * Expand environment variables in Generic Project file lists
   * Preserve the original paths of the Generic Project file list when
     adding/removing files
   * Added context menu options to open file manager or terminal in a files
     directory

Debugging
   * CDB: Fixed bug in location marker
   * CDB: Fixed handling of mixed-case file names correctly by normalizing file
     names

Help

QML/JS Support
  * Runtime QML errors become links to the location of the error
  * Extended code navigation and completion
  * Added initial semantic checks

  * New qml based .qmlproject file format (replaces old format)

  * New QmlDesigner
     * Allows visual manipulation of .qml files
     * Supports changing top-level states
     * Integrates tighly with text editor, e.g. shared history, navigation facilities ...

Platform Specific

Mac
   * Show build error count in Dock icon
   * Handle the OBJECTIVE_HEADERS qmake variable

Linux (GNOME and KDE)
   * Dropping files on the editor now opens them instead of inserting a url

Windows
   * Fixed possible crash when searching files in file system
   * Show build error count in Taskbar (Windows 7 only)
   * Show build progress in Taskbar (Windows 7 only)
   * Support Windows SDKs
Symbian Target